--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <img src="./images/2.png" alt="Rock" />
       </div>
       <div class="choice" id="s">
-        <img src="./images/3.png" alt="Scissor" />
+        <img src="./3.png" alt="Scissor" />
       </div>
     </div>
     <p id="action-message">Make Your Move!</p>
