--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     </div>
     <div class="choices">
       <div class="choice" id="r">
-        <img src="images/1.png" alt="Paper" height="96" width="96" />
+        <img src="./images/1.png" alt="Paper" height="96" width="96" />
       </div>
       <div class="choice" id="p">
-        <img src="images/2.png" alt="Rock" />
+        <img src="./images/2.png" alt="Rock" />
       </div>
       <div class="choice" id="s">
-        <img src="images/3.png" alt="Scissor" />
+        <img src="./images/3.png" alt="Scissor" />
       </div>
     </div>
     <p id="action-message">Make Your Move!</p>
