--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
     <div class="choices">
       <div class="choice" id="r">
        
-        <img src="https://img.icons8.com/material-outlined/24/000000/filled-note.png"  alt="Paper" height="96" width="96"/>
+        <img src="/images/1.png"  alt="Paper" height="96" width="96"/>
       </div>
       <div class="choice" id="p">
-        <img src="https://img.icons8.com/ios/2x/hand-rock.png" alt="Rock" />
+        <img src="/images/2.png" alt="Rock" />
       </div>
       <div class="choice" id="s">
         
-        <img src="https://img.icons8.com/windows/32/000000/hand-scissors--v1.png" alt="Scissor"/>
+        <img src="/images/1.png" alt="Scissor"/>
       </div>
     </div>
     <p id="action-message">Make Your Move!</p>
